...
                                                <rect key="frame" x="342" y="32" width="25" height="25"/>
                                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                                                <accessibility key="accessibilityConfiguration" identifier="mainVCAddButton"/>
                                                <state key="normal" image="plus_button"/>
                                                <connections>
...
                                                    <rect key="frame" x="20" y="5" width="266" height="21"/>
                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="mainVCCellTitleLabel"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <nil key="highlightedColor"/>
...
                                                    <rect key="frame" x="20" y="35" width="266" height="17"/>
                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="mainVCCellDateLabel"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                    <nil key="textColor"/>
...
                                                    <rect key="frame" x="315" y="10" width="50" height="40"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="mainVCCellDeleteButton"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                    <state key="normal" title="Delete"/>
...
                                        </tableViewCellContentView>
                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                        <accessibility key="accessibilityConfiguration" identifier="mainVCTableviewCell">
                                            <accessibilityTraits key="traits" none="YES"/>
                                            <bool key="isElement" value="YES"/>
...
                                </prototypes>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="mainVCTableview"/>
                                    <userDefinedRuntimeAttribute type="boolean" keyPath="isAccessibilityElement" value="YES"/>
                                </userDefinedRuntimeAttributes>
...
                                        <rect key="frame" x="10" y="35" width="20" height="20"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <accessibility key="accessibilityConfiguration" identifier="AddVCBackButton"/>
                                        <state key="normal" image="back_icon"/>
                                        <connections>
...
                                        <rect key="frame" x="328" y="29" width="37" height="33"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                                        <accessibility key="accessibilityConfiguration" identifier="AddVCSaveButton"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <state key="normal" title="Save">
...
                                        <rect key="frame" x="151" y="30" width="73" height="30"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <accessibility key="accessibilityConfiguration" identifier="AddVCTitleLabel"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
                                <rect key="frame" x="37" y="303" width="300" height="40"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="AddVCInputTextField"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <textInputTraits key="textInputTraits"/>
...
